--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script src="./script.js"></script>
 
     <title>React App</title>
   </head>
